--- a/index.html
+++ b/index.html
@@ -1,44 +1,17 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Under development : " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Under development</title>
+    <meta charset="utf-8" />
+    <title>ayrtonaraujo.net - v0.2 Alpha</title>
+    <meta name="author" content="Ayrton Araujo - https://launchpad.net/~ayrton"/>
+    <meta name="Description" content="Ayrton's personal info, bio and portfolio"/>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href=""/>
+    <link rel="shortcut icon" href="favicon.ico"/>
+    <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/jquery.mousewheel-min.js"></script>
+    <script src="js/jquery.terminal-0.4.17.js"></script>
+    <script src="js/terminal-0.2.min.js"></script>
+    <link href="css/jquery.terminal.css" rel="stylesheet"/>
   </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ayrtonfreeman">View on GitHub</a>
-
-          <h1 id="project_title">Under development</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+<body>
+</body>
