--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <meta name="Description" content="Ayrton's personal info, bio and portfolio"/>
     <link rel="sitemap" type="application/xml" title="Sitemap" href=""/>
     <link rel="shortcut icon" href="favicon.ico"/>
+    <link href="css/jquery.terminal.css" rel="stylesheet"/>
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/jquery.mousewheel-min.js"></script>
     <script src="js/jquery.terminal-0.4.17.js"></script>
     <script src="js/terminal-0.2.min.js"></script>
-    <link href="css/jquery.terminal.css" rel="stylesheet"/>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25585026-1']);
+  _gaq.push(['_setDomainName', 'ayrtonaraujo.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
 <body>
 </body>
