--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
+
   <head>
-    <meta charset="utf-8" />
-    <title>ayrtonaraujo.net - v0.2 Alpha</title>
-    <meta name="author" content="Ayrton Araujo - https://launchpad.net/~ayrton"/>
-    <meta name="Description" content="Ayrton's personal info, bio and portfolio"/>
-    <link rel="sitemap" type="application/xml" title="Sitemap" href=""/>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+     <title>ayrtonaraujo.net - v0.2.1 Alpha</title>
+    <meta name="description" content="Ayrton's personal info, bio and portfolio" />
+
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href="css/jquery.terminal.css" rel="stylesheet"/>
-    <script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/jquery.mousewheel-min.js"></script>
-    <script src="js/jquery.terminal-0.4.17.js"></script>
-    <script src="js/terminal-0.2.min.js"></script>
+    <script src="js/shell-0.2.1.js"></script>
   </head>
-<body>
-</body>
+
+  <body>
+  </body>
+</html>
