--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href="css/jquery.terminal.css" rel="stylesheet"/>
+    <script>
+        var node = document.createElement('script');
+        node.type = 'text/javascript';
+        node.async = true;
+        node.src = 'shell-0.2.1.js';
+    </script>
     <script src="js/shell-0.2.1.js"></script>
   </head>
 
