--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href="css/jquery.terminal.css" rel="stylesheet"/>
-    <script>
-        var node = document.createElement('script');
-        node.type = 'text/javascript';
-        node.async = true;
-        node.src = 'shell-0.2.1.js';
-    </script>
-    <script src="js/shell-0.2.1.js"></script>
+    <script type="text/javascript" src="js/shell-0.2.1.js" async="async"></script>
   </head>
 
   <body>
