--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
      <title>ayrtonaraujo.net - v0.2.1 Alpha</title>
     <meta name="description" content="Ayrton's personal info, bio and portfolio" />
