--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0021)http://seecoy.com/404 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>Under Maintenance :-(</title>
-<style type="text/css">
-			body{
-				margin: 0;
-				padding: 0;
-				background-color:#FFFFFF;
-				background-image: url("images/static.gif")
-			}
-		</style>
-<body><center>
-<img src="images/404.gif" align="RIGHT">
-</center>
+<!DOCTYPE html>
+<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
-</body></html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
+  <title>ayrtonaraujo.net</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+	<div id="console"></div>
+</body>
+  <script src="js/vendor/zepto.min.js"></script>
+  <script src="js/vendor/jqconsole.min.js"></script>
+  <script src="js/shell.js"></script>
+</html>
