--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
 				margin: 0;
 				padding: 0;
 				background-color:#FFFFFF;
-				background-image: url("images/static.gif")
+				background-image: url("assets/static.gif")
 			}
 		</style>
 <body><center>
-<img src="images/404.gif" align="RIGHT">
+<img src="assets/404.gif" align="RIGHT">
 </center>
 
 </body></html>
